navbar and breadcrumbs added

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,12 +19,21 @@
 .jumbotron {
   padding: 70px 30px 70px 30px;
   margin: 0px auto;
-  background-color: #9575CD;
+  background-color: #9575cd;
   color: floralwhite;
 }
 
 address {
-    font-size: 80%;
-    margin: 0;
-    color: #0f0f0f;
+  font-size: 80%;
+  margin: 0;
+  color: #0f0f0f;
+}
+
+body {
+  padding: 50px 0px 0px 0px;
+  z-index: 1;
+}
+
+.navbar-dark {
+  background-color: #512da8;
 }
